--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -9797,11 +9797,11 @@ a:focus {
 }
 
 #wrapper #content-wrapper {
-  /*background-image: url('../images/background.jpg');*/
-  /*background-size: cover;  Makes the image cover the entire screen */
-  /*background-repeat: no-repeat;  Ensures the image doesn't repeat */
-  /*background-position: center;  Centers the image */
-  background-color: #f8f9fa; /*#f8f9fc */
+  background-image: url('../images/background.jpg');
+  background-size: cover;  /*Makes the image cover the entire screen */
+  background-repeat: no-repeat;  /*Ensures the image doesn't repeat */
+  background-position: center;  /*Centers the image */
+  /*background-color: #f8f9fa; #f8f9fc */
   width: 100%;
   overflow-x: hidden;
 }
