--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -22,15 +22,15 @@
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #3d4348; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #3e5055; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #388da8; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #c02f28; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
-  --nav-color: #313336;  /* The default color of the main navmenu links */
-  --nav-hover-color: #77b6ca; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-color: #363131;  /* The default color of the main navmenu links */
+  --nav-hover-color: #be2e23; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #313336; /* Used for navigation links of the dropdown items in the navigation menu. */
@@ -1438,8 +1438,9 @@ section,
 }
 
 .pricing .cta-btn {
-  border: 1px solid var(--default-color);
-  color: var(--default-color);
+  background: var(--accent-color);
+  color: var(--contrast-color);
+  background: var(--accent-color);
   display: block;
   text-align: center;
   padding: 10px 35px;
@@ -1453,8 +1454,6 @@ section,
 }
 
 .pricing .cta-btn:hover {
-  background: var(--accent-color);
-  color: var(--contrast-color);
   border-color: var(--accent-color);
 }
 
@@ -1947,3 +1946,4 @@ section,
 .starter-section {
   /* Add your styles here */
 }
+
